fix: overflow 수정

--- a/iPad/css/style.css
+++ b/iPad/css/style.css
@@ -663,6 +663,7 @@ body {
     background-color: #000;
     height: 658px;
     transition: all 0.3s;
+    overflow: hidden;
 }
 
 #ipad__txt__bundle {
